# alpaca-trading-agent

./: .gitignore  CLAUDE.md  README.md  SESSION_CONTEXT.md  pyproject.toml
projects/RESEARCH_HERMES/aqra/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
projects/RESEARCH_HERMES/aqra/docs/paper/: aqra_paper_skeleton.md  attack_results.json  attack_results.md  draft.md  e_bh_llama3_8b_llm_attack_results.json  e_bh_llm_attack_results.json  e_bh_llm_attack_results.md  honest_agent_protocol.md  known_factor_repro_results.json  known_factor_repro_results.md  llm_attack_results.json  llm_attack_results.md  maxleak_metered_llama3_8b_llm_attack_results.json  maxleak_metered_llama3_8b_llm_attack_results.md  metered_llama3_8b_llm_attack_results.json  metered_llm_attack_results.json  metered_llm_attack_results.md  metered_mistral_llm_attack_results.json  metered_mistral_llm_attack_results.md  naive_claude-haiku-4-5-20251001_llm_attack_results.json  naive_claude-haiku-4-5-20251001_llm_attack_results.md  naive_claude-sonnet-5_llm_attack_results.json  naive_claude-sonnet-5_llm_attack_results.md  naive_llama3_8b_llm_attack_results.json  naive_llama3_8b_llm_attack_results.md  naive_llm_attack_results.json  naive_llm_attack_results.md  pipeline_run_results.json  pipeline_run_results.md  placebo_regime_results.json  placebo_regime_results.md  protocol_claude-haiku-4-5-20251001_llm_attack_results.json  protocol_claude-haiku-4-5-20251001_llm_attack_results.md  protocol_claude-sonnet-5_llm_attack_results.json  protocol_claude-sonnet-5_llm_attack_results.md  protocol_llama3_8b_llm_attack_results.json  protocol_llama3_8b_llm_attack_results.md  protocol_llm_attack_results.json  (+8 more)
projects/RESEARCH_HERMES/aqra/notebooks/: KAGGLE_README.md  kaggle_honest_agent_scaling.ipynb  known_factor_repro.ipynb
projects/RESEARCH_HERMES/aqra/scripts/: aggregate_llm_results.py  attack_suite.py  known_factor_repro.py  llm_adaptive_experiment.py  merge_kaggle_outputs.py  ml_benchmark_demo.py  monitor_llm_sweeps.py  placebo_regime.py  plot_leakage_factors.py  run_haiku_fast.py  run_phase1_scaled_llm.py  run_pipeline.py  run_step3_sweeps.sh  run_step3_sweeps_sequential.py  run_step4_sparse_metered.py  run_step5_mistral.py  verify_ledger.py
projects/RESEARCH_HERMES/aqra/tests/: test_cli.py  test_config.py  test_db.py  test_import.py  test_integration.py
projects/RESEARCH_HERMES/prometheus-math/: pyproject.toml
projects/RESEARCH_HERMES/prometheus-math/paper/: C42_kband_theorem.tex
projects/RESEARCH_HERMES/prometheus-math/prometheus/: c42_certify_full.py  c42_finite_n.py  c42_kband.py  c42_kband_v2.py  c42_quadrature_remainder.py  c42_theorem.py
projects/RESEARCH_HERMES/prometheus-math/state/: CERTIFIED_BREAKTHROUGH_k3_2026-06-20.json  CERTIFIED_v2_k3_2026-07-03.json  CERTIFIED_v2b_k3_2026-07-03.json  CERTIFIED_v2c_k3_QN1700_2026-07-03.json  corrected_k3_certifiable_2026-07-03.json  corrected_k3_polished_2026-07-03.json  corrected_k3_repaired_2026-07-03.json  scout_low_tau_2026-07-02.json  scout_stage2_2026-07-02.json
projects/RESEARCH_HERMES/prometheus-math/tests/: conftest.py  test_c42_certify_full.py  test_c42_finite_n.py  test_c42_kband_v2.py  test_c42_quadrature_remainder.py  test_c42_theorem.py
projects/newVenture/sentinel/: .gitignore  README.md  pyproject.toml
projects/newVenture/sentinel/scripts/: run_cloud_demo.py
projects/newVenture/sentinel/tests/: test_models.py
(+251 files in other folders)
