[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Runtime safety verifier for physical AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Satyam Das", email = "satyamdas03@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "boto3>=1.34",
    "paho-mqtt>=1.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "numpy>=1.26",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]
isaac = [
    "isaacsim-assets",
    "isaacsim-core",
    "isaacsim-extscenes",
    "isaacsim-app",
]

[project.scripts]
sentinel-verify = "sentinel_verifier.cli:main"
sentinel-policy = "policy_forge.cli:main"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
